// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexedFieldsTable should filter based on the query bar 1`] = `
<I18nProvider>
  <div>
    <Table
      editField={[Function]}
      indexPattern={
        Object {
          "getNonScriptedFields": [Function],
        }
      }
      items={
        Array [
          Object {
            "displayName": "Elastic",
            "excluded": false,
            "format": undefined,
            "indexPattern": undefined,
            "name": "Elastic",
            "routes": undefined,
            "searchable": true,
          },
        ]
      }
    />
  </div>
</I18nProvider>
`;

exports[`IndexedFieldsTable should filter based on the type filter 1`] = `
<I18nProvider>
  <div>
    <Table
      editField={[Function]}
      indexPattern={
        Object {
          "getNonScriptedFields": [Function],
        }
      }
      items={
        Array [
          Object {
            "displayName": "timestamp",
            "excluded": false,
            "format": undefined,
            "indexPattern": undefined,
            "name": "timestamp",
            "routes": undefined,
            "type": "date",
          },
        ]
      }
    />
  </div>
</I18nProvider>
`;

exports[`IndexedFieldsTable should render normally 1`] = `
<I18nProvider>
  <div>
    <Table
      editField={[Function]}
      indexPattern={
        Object {
          "getNonScriptedFields": [Function],
        }
      }
      items={
        Array [
          Object {
            "displayName": "Elastic",
            "excluded": false,
            "format": undefined,
            "indexPattern": undefined,
            "name": "Elastic",
            "routes": undefined,
            "searchable": true,
          },
          Object {
            "displayName": "timestamp",
            "excluded": false,
            "format": undefined,
            "indexPattern": undefined,
            "name": "timestamp",
            "routes": undefined,
            "type": "date",
          },
          Object {
            "displayName": "conflictingField",
            "excluded": false,
            "format": undefined,
            "indexPattern": undefined,
            "name": "conflictingField",
            "routes": undefined,
            "type": "conflict",
          },
        ]
      }
    />
  </div>
</I18nProvider>
`;
